# fortran-skeleton

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  README.md  ford-docs.md
cmake/: projectnameConfig.cmake.in
cmake/Modules/: CodeCoverage.cmake  MakeFordDocs.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake  pFUnit.cmake
docs-pages/: 01-install.md  02-run.md  index.md
src/: library.f90  main.f90  variable_kinds.f90
src/environment_lib/: CMakeLists.txt  variable_kinds.f90
src/program/: main.f90
src/project_lib/: CMakeLists.txt  library.f90  type_library.f90
src/projectname/: CMakeLists.txt  main.f90
tests/: CMakeLists.txt  library_test.pf
tests/test_installation/: CMakeLists.txt.in  test_program.f90
